--- a/modeco/packages/ekg/ekg/ekg.docker-compose.yml
+++ b/modeco/packages/ekg/ekg/ekg.docker-compose.yml
@@ -12,6 +12,7 @@ services:
     networks: [swarm_overlay]
     deploy:
       mode: replicated
+      replicas: ${EKG_ELASTICSEARCH_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${EKG_ELASTICSEARCH_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -19,7 +20,10 @@ services:
         reservations:
           cpus: '${EKG_ELASTICSEARCH_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${EKG_ELASTICSEARCH_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${EKG_ELASTICSEARCH_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: [${EKG_ELASTICSEARCH_DEPLOY_LABELS}]
+    labels: [${EKG_ELASTICSEARCH_LABELS}]
 # END SERVICE elasticsearch.base
 
 # START SERVICE kibana.base
@@ -32,6 +36,7 @@ services:
     networks: [swarm_overlay]
     deploy:
       mode: replicated
+      replicas: ${EKG_KIBANA_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${EKG_KIBANA_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -39,7 +44,10 @@ services:
         reservations:
           cpus: '${EKG_KIBANA_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${EKG_KIBANA_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${EKG_KIBANA_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: []
+    labels: [${EKG_KIBANA_LABELS}]
 # END SERVICE kibana.base
 
 # START SERVICE grafana.base
@@ -52,6 +60,7 @@ services:
     networks: [swarm_overlay]
     deploy:
       mode: replicated
+      replicas: ${EKG_GRAFANA_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${EKG_GRAFANA_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -59,7 +68,10 @@ services:
         reservations:
           cpus: '${EKG_GRAFANA_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${EKG_GRAFANA_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${EKG_GRAFANA_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: [${EKG_GRAFANA_DEPLOY_LABELS}]
+    labels: [${EKG_GRAFANA_LABELS}]
 # END SERVICE grafana.base
 
 networks: {swarm_overlay: { external: true }}
