--- a/modeco/packages/kz/kz/kz.docker-compose.yml
+++ b/modeco/packages/kz/kz/kz.docker-compose.yml
@@ -12,6 +12,7 @@ services:
     networks: [swarm_overlay]
     deploy:
       mode: replicated
+      replicas: ${KZ_KAFKA_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${KZ_KAFKA_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -19,7 +20,10 @@ services:
         reservations:
           cpus: '${KZ_KAFKA_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${KZ_KAFKA_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
-      labels: []
+      placement:
+        constraints: [${KZ_KAFKA_DEPLOY_PLACEMENT_CONSTRAINTS}]
+      labels: [${KZ_KAFKA_DEPLOY_LABELS}]
+    labels: [${KZ_KAFKA_LABELS}]
 # END SERVICE kafka.base
 
 # START SERVICE zookeeper.base
@@ -32,6 +36,7 @@ services:
     networks: [swarm_overlay]
     deploy:
       mode: replicated
+      replicas: ${KZ_ZOOKEEPER_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${KZ_ZOOKEEPER_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -39,7 +44,10 @@ services:
         reservations:
           cpus: '${KZ_ZOOKEEPER_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${KZ_ZOOKEEPER_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${KZ_ZOOKEEPER_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: [${KZ_ZOOKEEPER_DEPLOY_LABELS}]
+    labels: [${KZ_ZOOKEEPER_LABELS}]
 # END SERVICE zookeeper.base
 
 networks: {swarm_overlay: { external: true }}
