--- a/modeco/packages/ekg/ekg/ekg_rest_elasticsearch.docker-compose.yml
+++ b/modeco/packages/ekg/ekg/ekg_rest_elasticsearch.docker-compose.yml
@@ -12,6 +12,7 @@ services:
     networks: [modeco_overlay, swarm_overlay]
     deploy:
       mode: replicated
+      replicas: ${EKG_REST_ELASTICSEARCH_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${EKG_REST_ELASTICSEARCH_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -19,7 +20,10 @@ services:
         reservations:
           cpus: '${EKG_REST_ELASTICSEARCH_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${EKG_REST_ELASTICSEARCH_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${EKG_REST_ELASTICSEARCH_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: [traefik.enable=true,traefik.docker.network=modeco_overlay, traefik.http.services.swarm_g1_ekg_elasticsearch.loadbalancer.server.port=80, traefik.http.routers.swarm_g1_ekg_elasticsearch.entrypoints=conteco, traefik.http.routers.swarm_g1_ekg_elasticsearch.rule=PathPrefix("/swarm/ekg/elasticsearch")]
+    labels: [${EKG_REST_ELASTICSEARCH_LABELS}]
 # END SERVICE nginx.rewrite
 
 volumes: {}
