--- a/modeco/packages/ingest/ingest_journalctl/ingest_journalctl.docker-compose.yml
+++ b/modeco/packages/ingest/ingest_journalctl/ingest_journalctl.docker-compose.yml
@@ -5,13 +5,14 @@ services:
 # START SERVICE filebeat.base
   filebeat:
     image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.filebeat.base:7.1.1
-    environment: ['ES_FILEBEAT_FILEPATHS=${INGEST_JOURNALCTL_ENVIRONMENT_FILEPATHS}','ES_FILEBEAT_OUTPUT_CONSOLE=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONSOLE}','ES_FILEBEAT_OUTPUT_ELASTICSEARCH=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_ELASTICSEARCH}','ES_FILEBEAT_OUTPUT_KAFKA=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_KAFKA}','ES_FILEBEAT_OUTPUT_CONFIG_ELASTICSEARCH_HOSTS=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_ELASTICSEARCH_HOSTS}','ES_FILEBEAT_OUTPUT_CONFIG_ELASTICSEARCH_INDEX=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_ELASTICSEARCH_INDEX}','ES_FILEBEAT_OUTPUT_CONFIG_KIBANA_HOST=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_KIBANA_HOST}','ES_FILEBEAT_OUTPUT_CONFIG_KIBANA_DASHBOARDS=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_KIBANA_DASHBOARDS}','ES_FILEBEAT_OUTPUT_CONFIG_KAFKA_HOSTS=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_KAFKA_HOSTS}','ES_FILEBEAT_OUTPUT_CONFIG_KAFKA_TOPIC=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_KAFKA_TOPIC}']
+    environment: ['ES_FILEBEAT_FILEPATHS=${INGEST_JOURNALCTL_ENVIRONMENT_FILEPATHS}','ES_FILEBEAT_OUTPUT_CONSOLE=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONSOLE}','ES_FILEBEAT_OUTPUT_ELASTICSEARCH=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_ELASTICSEARCH}','ES_FILEBEAT_OUTPUT_LOGSTASH=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_LOGSTASH}','ES_FILEBEAT_OUTPUT_KAFKA=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_KAFKA}','ES_FILEBEAT_OUTPUT_CONFIG_ELASTICSEARCH_HOSTS=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_ELASTICSEARCH_HOSTS}','ES_FILEBEAT_OUTPUT_CONFIG_ELASTICSEARCH_INDEX=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_ELASTICSEARCH_INDEX}','ES_FILEBEAT_OUTPUT_CONFIG_LOGSTASH_HOSTS=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_LOGSTASH_HOSTS}','ES_FILEBEAT_OUTPUT_CONFIG_LOGSTASH_INDEX=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_LOGSTASH_INDEX}','ES_FILEBEAT_OUTPUT_CONFIG_KIBANA_HOST=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_KIBANA_HOST}','ES_FILEBEAT_OUTPUT_CONFIG_KIBANA_DASHBOARDS=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_KIBANA_DASHBOARDS}','ES_FILEBEAT_OUTPUT_CONFIG_KAFKA_HOSTS=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_KAFKA_HOSTS}','ES_FILEBEAT_OUTPUT_CONFIG_KAFKA_TOPIC=${INGEST_JOURNALCTL_ENVIRONMENT_OUTPUT_CONFIG_KAFKA_TOPIC}']
     command: []
     volumes: ['swarm_g1_ingest_journalctl_filebeat_volume:/usr/share/filebeat/data','/etc:/hostfs/etc:ro'${INGEST_JOURNALCTL_ENVIRONMENT_FILEPATHS_MAPPING}]
     ports: []
     networks: [swarm_overlay]
     deploy:
       mode: ${INGEST_JOURNALCTL_DEPLOY_MODE}
+      replicas: ${INGEST_JOURNALCTL_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${INGEST_JOURNALCTL_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -19,7 +20,10 @@ services:
         reservations:
           cpus: '${INGEST_JOURNALCTL_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${INGEST_JOURNALCTL_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${INGEST_JOURNALCTL_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: [${INGEST_JOURNALCTL_DEPLOY_LABELS}]
+    labels: [${INGEST_JOURNALCTL_LABELS}]
 # END SERVICE filebeat.base
 
 volumes: {swarm_g1_ingest_journalctl_filebeat_volume: { external: true }}
