--- a/modeco/packages/metrics_node/metrics_node/metrics_node.docker-compose.yml
+++ b/modeco/packages/metrics_node/metrics_node/metrics_node.docker-compose.yml
@@ -12,6 +12,7 @@ services:
     networks: [swarm_overlay]
     deploy:
       mode: global
+      replicas: ${METRICS_NODE_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${METRICS_NODE_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -19,7 +20,10 @@ services:
         reservations:
           cpus: '${METRICS_NODE_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${METRICS_NODE_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${METRICS_NODE_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: [${METRICS_NODE_DEPLOY_LABELS}]
+    labels: [${METRICS_NODE_LABELS}]
 # END SERVICE metricbeat.node
 
 volumes: {swarm_g1_metrics_node_metrics_node_volume: { external: true }}
