--- a/modeco/packages/metrics_overlay/metrics_overlay/metrics_overlay.docker-compose.yml
+++ b/modeco/packages/metrics_overlay/metrics_overlay/metrics_overlay.docker-compose.yml
@@ -12,6 +12,7 @@ services:
     networks: [swarm_overlay]
     deploy:
       mode: replicated
+      replicas: ${METRICS_OVERLAY_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${METRICS_OVERLAY_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -19,7 +20,10 @@ services:
         reservations:
           cpus: '${METRICS_OVERLAY_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${METRICS_OVERLAY_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${METRICS_OVERLAY_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: [${METRICS_OVERLAY_DEPLOY_LABELS}]
+    labels: [${METRICS_OVERLAY_LABELS}]
 # END SERVICE metricbeat.overlay
 
 volumes: {swarm_g1_metrics_overlay_metrics_overlay_volume: { external: true }}
