--- a/modeco/packages/streamsets/export/export_ui_streamsets.docker-compose.yml
+++ b/modeco/packages/streamsets/export/export_ui_streamsets.docker-compose.yml
@@ -12,6 +12,7 @@ services:
     networks: [modeco_overlay, swarm_overlay]
     deploy:
       mode: replicated
+      replicas: ${EXPORT_UI_STREAMSETS_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${EXPORT_UI_STREAMSETS_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -19,7 +20,10 @@ services:
         reservations:
           cpus: '${EXPORT_UI_STREAMSETS_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${EXPORT_UI_STREAMSETS_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${EXPORT_UI_STREAMSETS_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: [traefik.enable=true,traefik.docker.network=modeco_overlay, traefik.http.services.swarm_g1_export_nginx.loadbalancer.server.port=80, traefik.http.routers.swarm_g1_export_nginx.entrypoints=conteco, traefik.http.routers.swarm_g1_export_nginx.rule=PathPrefix("/swarm/export/streamsets")]
+    labels: [${EXPORT_UI_STREAMSETS_LABELS}]
 # END SERVICE nginx.rewrite
 
 volumes: {}
