--- a/modeco/packages/streamsets/processor/processor.docker-compose.yml
+++ b/modeco/packages/streamsets/processor/processor.docker-compose.yml
@@ -12,6 +12,7 @@ services:
     networks: [swarm_overlay]
     deploy:
       mode: replicated
+      replicas: ${PROCESSOR_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${PROCESSOR_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -19,7 +20,10 @@ services:
         reservations:
           cpus: '${PROCESSOR_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${PROCESSOR_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
+      placement:
+        constraints: [${PROCESSOR_DEPLOY_PLACEMENT_CONSTRAINTS}]
       labels: [${PROCESSOR_DEPLOY_LABELS}]
+    labels: [${PROCESSOR_LABELS}]
 # END SERVICE streamsets.base
 
 volumes: {swarm_g1_processor_streamsets_volume: { external: true }}
