--- a/modeco/packages/ekg/ekg/ekg.docker-compose.yml
+++ b/modeco/packages/ekg/ekg/ekg.docker-compose.yml
@@ -29,7 +29,7 @@ services:
 # START SERVICE kibana.base
   kibana:
     image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.kibana.base:7.1.1
-    environment: ['ELASTICSEARCH_HOSTS=http://elasticsearch:9200', 'SERVER_BASEPATH=/swarm/ekg/kibana']
+    environment: ['ELASTICSEARCH_HOSTS=http://elasticsearch:9200','SERVER_BASEPATH=/swarm/ekg/kibana']
     command: []
     volumes: []
     ports: []
@@ -46,14 +46,14 @@ services:
           memory: '${EKG_KIBANA_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
       placement:
         constraints: [${EKG_KIBANA_DEPLOY_PLACEMENT_CONSTRAINTS}]
-      labels: []
+      labels: [${EKG_KIBANA_DEPLOY_LABELS}]
     labels: [${EKG_KIBANA_LABELS}]
 # END SERVICE kibana.base
 
 # START SERVICE grafana.base
   grafana:
     image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.grafana.base:6.3.5
-    environment: ['GF_LOG_FORMAT=json', 'GF_LOG_FILE_FORMAT=json', 'GF_LOG_CONSOLE_FORMAT=json', 'GF_LOG_SYSLOG_FORMAT=json', 'GF_LOG_LEVEL=warn', GF_SERVER_ROOT_URL=/swarm/ekg/grafana]
+    environment: ['GF_LOG_FORMAT=json', 'GF_LOG_FILE_FORMAT=json', 'GF_LOG_CONSOLE_FORMAT=json', 'GF_LOG_SYSLOG_FORMAT=json', 'GF_LOG_LEVEL=warn', 'GF_SERVER_ROOT_URL=/swarm/ekg/grafana']
     command: []
     volumes: ['swarm_g1_ekg_grafana_volume:/var/lib/grafana']
     ports: []
