--- a/modeco/packages/ekg/ekg/ekg.docker-compose.yml
+++ b/modeco/packages/ekg/ekg/ekg.docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
 # START SERVICE elasticsearch.base
   elasticsearch:
-    image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.elasticsearch.base:7.1.1
+    image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.elasticsearch.base:7.8.0
     environment: ['cluster.name=elasticsearch', 'bootstrap.memory_lock=true', ES_JAVA_OPTS=-Xms${EKG_ELASTICSEARCH_DEPLOY_RESOURCES_RESERVATIONS_MEMORY} -Xmx${EKG_ELASTICSEARCH_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}, 'discovery.type=single-node']
     command: []
     volumes: ['swarm_g1_ekg_elasticsearch_volume:/usr/share/elasticsearch/data']
@@ -12,7 +12,7 @@ services:
     networks: [swarm_overlay]
     deploy:
       mode: replicated
-      replicas: ${EKG_ELASTICSEARCH_DEPLOY_REPLICAS}
+      ${EKG_ELASTICSEARCH_DEPLOY_MODE_REPLICATED_REPLICAS}
       resources:
         limits:
           cpus: '${EKG_ELASTICSEARCH_DEPLOY_RESOURCES_LIMITS_CPUS}'
