--- a/modeco/packages/metrics_node/metrics_node/metrics_node.docker-compose.yml
+++ b/modeco/packages/metrics_node/metrics_node/metrics_node.docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
 # START SERVICE metricbeat.node
   metricbeat:
-    image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.metricbeat.node:7.1.1
+    image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.metricbeat.node:7.8.0
     environment: ['ES_METRICBEAT_OUTPUT_CONSOLE=${METRICS_NODE_ENVIRONMENT_OUTPUT_CONSOLE}','ES_METRICBEAT_OUTPUT_ELASTICSEARCH=${METRICS_NODE_ENVIRONMENT_OUTPUT_ELASTICSEARCH}','ES_METRICBEAT_OUTPUT_KAFKA=${METRICS_NODE_ENVIRONMENT_OUTPUT_KAFKA}','ES_METRICBEAT_OUTPUT_CONFIG_ELASTICSEARCH_HOSTS=${METRICS_NODE_ENVIRONMENT_OUTPUT_CONFIG_ELASTICSEARCH_HOSTS}','ES_METRICBEAT_OUTPUT_CONFIG_KIBANA_HOST=${METRICS_NODE_ENVIRONMENT_OUTPUT_CONFIG_KIBANA_HOST}','ES_METRICBEAT_OUTPUT_CONFIG_KIBANA_DASHBOARDS=${METRICS_NODE_ENVIRONMENT_OUTPUT_CONFIG_KIBANA_DASHBOARDS}','ES_METRICBEAT_OUTPUT_CONFIG_KAFKA_HOSTS=${METRICS_NODE_ENVIRONMENT_OUTPUT_CONFIG_KAFKA_HOSTS}','ES_METRICBEAT_OUTPUT_CONFIG_KAFKA_TOPIC=${METRICS_NODE_ENVIRONMENT_OUTPUT_CONFIG_KAFKA_TOPIC}']
     command: []
     volumes: ['/etc:/hostfs/etc:ro','/var/run/docker.sock:/var/run/docker.sock:ro','/proc:/hostfs/proc:ro','swarm_g1_metrics_node_metrics_node_volume:/usr/share/metricbeat/data']
@@ -12,7 +12,7 @@ services:
     networks: [swarm_overlay]
     deploy:
       mode: global
-      replicas: ${METRICS_NODE_DEPLOY_REPLICAS}
+      ${METRICS_NODE_DEPLOY_MODE_REPLICATED_REPLICAS}
       resources:
         limits:
           cpus: '${METRICS_NODE_DEPLOY_RESOURCES_LIMITS_CPUS}'
