--- a/modeco/packages/metrics_overlay/metrics_overlay/metrics_overlay.docker-compose.yml
+++ b/modeco/packages/metrics_overlay/metrics_overlay/metrics_overlay.docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
 # START SERVICE metricbeat.overlay
   metricbeat:
-    image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.metricbeat.overlay:7.1.1
+    image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.metricbeat.overlay:7.8.0
     environment: ['ES_METRICBEAT_OUTPUT_CONSOLE=${METRICS_OVERLAY_ENVIRONMENT_OUTPUT_CONSOLE}','ES_METRICBEAT_OUTPUT_ELASTICSEARCH=${METRICS_OVERLAY_ENVIRONMENT_OUTPUT_ELASTICSEARCH}','ES_METRICBEAT_OUTPUT_KAFKA=${METRICS_OVERLAY_ENVIRONMENT_OUTPUT_KAFKA}','ES_METRICBEAT_OUTPUT_CONFIG_ELASTICSEARCH_HOSTS=${METRICS_OVERLAY_ENVIRONMENT_OUTPUT_CONFIG_ELASTICSEARCH_HOSTS}','ES_METRICBEAT_OUTPUT_CONFIG_KIBANA_HOST=${METRICS_OVERLAY_ENVIRONMENT_OUTPUT_CONFIG_KIBANA_HOST}','ES_METRICBEAT_OUTPUT_CONFIG_KIBANA_DASHBOARDS=${METRICS_OVERLAY_ENVIRONMENT_OUTPUT_CONFIG_KIBANA_DASHBOARDS}','ES_METRICBEAT_OUTPUT_CONFIG_KAFKA_HOSTS=${METRICS_OVERLAY_ENVIRONMENT_OUTPUT_CONFIG_KAFKA_HOSTS}','ES_METRICBEAT_OUTPUT_CONFIG_KAFKA_TOPIC=${METRICS_OVERLAY_ENVIRONMENT_OUTPUT_CONFIG_KAFKA_TOPIC}',${METRICS_OVERLAY_ENVIRONMENT_SERVICES}]
     command: []
     volumes: ['/etc:/hostfs/etc:ro','swarm_g1_metrics_overlay_metrics_overlay_volume:/usr/share/metricbeat/data']
@@ -12,7 +12,7 @@ services:
     networks: [swarm_overlay]
     deploy:
       mode: replicated
-      replicas: ${METRICS_OVERLAY_DEPLOY_REPLICAS}
+      ${METRICS_OVERLAY_DEPLOY_MODE_REPLICATED_REPLICAS}
       resources:
         limits:
           cpus: '${METRICS_OVERLAY_DEPLOY_RESOURCES_LIMITS_CPUS}'
