--- a/modeco/packages/ekg/ekg/ekg_rest_elasticsearch.docker-compose.yml
+++ b/modeco/packages/ekg/ekg/ekg_rest_elasticsearch.docker-compose.yml
@@ -5,26 +5,21 @@ services:
 # START SERVICE nginx.rewrite
   nginx:
     image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.nginx.rewrite:1.17.3
-    environment: ['CONTECO_NGINX_CONF_LOCATION=/swarm/ekg/elasticsearch', 'CONTECO_NGINX_CONF_PROXY_PASS=swarm_g1_ekg_elasticsearch:9200']
+    environment: ['CONTECO_NGINX_CONF_LOCATION=/${CONTECO_URLPREFIX}/elasticsearch', 'CONTECO_NGINX_CONF_PROXY_PASS=${CONTECO_STACKPREFIX}_elasticsearch:9200']
     command: []
     volumes: []
     ports: []
-    networks: [modeco_overlay, swarm_overlay]
+    networks: [${CONTECO_NETWORKGLOBAL}_overlay, ${CONTECO_NETWORKLOCAL}_overlay]
     deploy:
       mode: replicated
-      replicas: ${EKG_REST_ELASTICSEARCH_DEPLOY_REPLICAS}
       resources:
         limits:
-          cpus: '${EKG_REST_ELASTICSEARCH_DEPLOY_RESOURCES_LIMITS_CPUS}'
           memory: '${EKG_REST_ELASTICSEARCH_DEPLOY_RESOURCES_LIMITS_MEMORY}'
         reservations:
-          cpus: '${EKG_REST_ELASTICSEARCH_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${EKG_REST_ELASTICSEARCH_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
-      placement:
-        constraints: [${EKG_REST_ELASTICSEARCH_DEPLOY_PLACEMENT_CONSTRAINTS}]
-      labels: [traefik.enable=true,traefik.docker.network=modeco_overlay, traefik.http.services.swarm_g1_ekg_elasticsearch.loadbalancer.server.port=80, traefik.http.routers.swarm_g1_ekg_elasticsearch.entrypoints=conteco, traefik.http.routers.swarm_g1_ekg_elasticsearch.rule=PathPrefix("/swarm/ekg/elasticsearch")]
-    labels: [${EKG_REST_ELASTICSEARCH_LABELS}]
+${EKG_REST_ELASTICSEARCH_COMPOSE_EXTENSIONS}
 # END SERVICE nginx.rewrite
 
+networks: {${CONTECO_NETWORKGLOBAL}_overlay: { external: true }, ${CONTECO_NETWORKLOCAL}_overlay: { external: true }}
 volumes: {}
-networks: {modeco_overlay: { external: true }, swarm_overlay: { external: true }}
+${CONTECO_DC_GLOBAL_COMPOSE_EXTENSIONS}
