--- a/modeco/packages/kz/kz/kz.docker-compose.yml
+++ b/modeco/packages/kz/kz/kz.docker-compose.yml
@@ -7,23 +7,17 @@ services:
     image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.kafka.base:5.4.0
     environment: ['KAFKA_HEAP_OPTS=-Xmx${KZ_KAFKA_DEPLOY_RESOURCES_RESERVATIONS_MEMORY} -Xms${KZ_KAFKA_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}','KAFKA_BROKER_ID=1','KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181','KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092${KZ_KAFKA_KAFKA_ADVERTISED_LISTENERS}','KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT${KZ_KAFKA_KAFKA_LISTENER_SECURITY_PROTOCOL_MAP}','KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT','KAFKA_AUTO_CREATE_TOPICS_ENABLE=true','KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1','KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0','KAFKA_MIN_INSYNC_REPLICAS=1','KAFKA_DEFAULT_REPLICATION_FACTOR=1','KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1','KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1','KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 1','CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka:9092','CONFLUENT_METRICS_REPORTER_ZOOKEEPER_CONNECT: zookeeper:2181','CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 1','CONFLUENT_METRICS_ENABLE: "true"','CONFLUENT_SUPPORT_CUSTOMER_ID: "anonymous"','KAFKA_LOG_RETENTION_HOURS=1']
     command: []
-    volumes: ['swarm_g1_kz_kafka_secrets_volume:/etc/kafka/secrets','swarm_g1_kz_kafka_data_volume:/var/lib/kafka/data']
+    volumes: ['${CONTECO_STACKPREFIX}_kafka_secrets_volume:/etc/kafka/secrets','${CONTECO_STACKPREFIX}_kafka_data_volume:/var/lib/kafka/data']
     ports: [${KZ_KAFKA_PORTS}]
-    networks: [swarm_overlay]
+    networks: [${CONTECO_NETWORKLOCAL}_overlay]
     deploy:
       mode: replicated
-      replicas: ${KZ_KAFKA_DEPLOY_REPLICAS}
       resources:
         limits:
-          cpus: '${KZ_KAFKA_DEPLOY_RESOURCES_LIMITS_CPUS}'
           memory: '${KZ_KAFKA_DEPLOY_RESOURCES_LIMITS_MEMORY}'
         reservations:
-          cpus: '${KZ_KAFKA_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${KZ_KAFKA_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
-      placement:
-        constraints: [${KZ_KAFKA_DEPLOY_PLACEMENT_CONSTRAINTS}]
-      labels: [${KZ_KAFKA_DEPLOY_LABELS}]
-    labels: [${KZ_KAFKA_LABELS}]
+${KZ_KAFKA_COMPOSE_EXTENSIONS}
 # END SERVICE kafka.base
 
 # START SERVICE zookeeper.base
@@ -31,12 +25,11 @@ services:
     image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.zookeeper.base:5.4.0
     environment: ['ZOOKEEPER_CLIENT_PORT=2181','ZOOKEEPER_TICK_TIME=2000']
     command: []
-    volumes: ['swarm_g1_kz_zookeeper_secrets_volume:/etc/zookeeper/secrets','swarm_g1_kz_zookeeper_data_volume:/var/lib/zookeeper/data','swarm_g1_kz_zookeeper_log_volume:/var/lib/zookeeper/log']
+    volumes: ['${CONTECO_STACKPREFIX}_zookeeper_secrets_volume:/etc/zookeeper/secrets','${CONTECO_STACKPREFIX}_zookeeper_data_volume:/var/lib/zookeeper/data','${CONTECO_STACKPREFIX}_zookeeper_log_volume:/var/lib/zookeeper/log']
     ports: []
-    networks: [swarm_overlay]
+    networks: [${CONTECO_NETWORKLOCAL}_overlay]
     deploy:
       mode: replicated
-      replicas: ${KZ_ZOOKEEPER_DEPLOY_REPLICAS}
       resources:
         limits:
           cpus: '${KZ_ZOOKEEPER_DEPLOY_RESOURCES_LIMITS_CPUS}'
@@ -46,10 +39,11 @@ services:
           memory: '${KZ_ZOOKEEPER_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
       placement:
         constraints: [${KZ_ZOOKEEPER_DEPLOY_PLACEMENT_CONSTRAINTS}]
-      labels: [${KZ_ZOOKEEPER_DEPLOY_LABELS}]
-    labels: [${KZ_ZOOKEEPER_LABELS}]
+      ${KZ_BASH_DEPLOY_EXTENSIONS}
+    ${KZ_BASH_SERVICE_EXTENSIONS}
 # END SERVICE zookeeper.base
 
-networks: {swarm_overlay: { external: true }}
-volumes: {swarm_g1_kz_kafka_secrets_volume: { external: true },swarm_g1_kz_kafka_data_volume: { external: true },swarm_g1_kz_zookeeper_secrets_volume: { external: true },swarm_g1_kz_zookeeper_data_volume: { external: true },swarm_g1_kz_zookeeper_log_volume: { external: true }}
+networks: {${CONTECO_NETWORKLOCAL}_overlay: { external: true }}
+volumes: {${CONTECO_STACKPREFIX}_kafka_secrets_volume: { external: true },${CONTECO_STACKPREFIX}_kafka_data_volume: { external: true },${CONTECO_STACKPREFIX}_zookeeper_secrets_volume: { external: true },${CONTECO_STACKPREFIX}_zookeeper_data_volume: { external: true },${CONTECO_STACKPREFIX}_zookeeper_log_volume: { external: true }}
+${CONTECO_DC_GLOBAL_COMPOSE_EXTENSIONS}
 
