--- a/modeco/packages/metrics_node/metrics_node/metrics_node.docker-compose.yml
+++ b/modeco/packages/metrics_node/metrics_node/metrics_node.docker-compose.yml
@@ -7,24 +7,19 @@ services:
     image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.metricbeat.node:7.8.0
     environment: ['ES_METRICBEAT_OUTPUT_CONSOLE=${METRICS_NODE_ENVIRONMENT_OUTPUT_CONSOLE}','ES_METRICBEAT_OUTPUT_ELASTICSEARCH=${METRICS_NODE_ENVIRONMENT_OUTPUT_ELASTICSEARCH}','ES_METRICBEAT_OUTPUT_KAFKA=${METRICS_NODE_ENVIRONMENT_OUTPUT_KAFKA}','ES_METRICBEAT_OUTPUT_CONFIG_ELASTICSEARCH_HOSTS=${METRICS_NODE_ENVIRONMENT_OUTPUT_CONFIG_ELASTICSEARCH_HOSTS}','ES_METRICBEAT_OUTPUT_CONFIG_KIBANA_HOST=${METRICS_NODE_ENVIRONMENT_OUTPUT_CONFIG_KIBANA_HOST}','ES_METRICBEAT_OUTPUT_CONFIG_KIBANA_DASHBOARDS=${METRICS_NODE_ENVIRONMENT_OUTPUT_CONFIG_KIBANA_DASHBOARDS}','ES_METRICBEAT_OUTPUT_CONFIG_KAFKA_HOSTS=${METRICS_NODE_ENVIRONMENT_OUTPUT_CONFIG_KAFKA_HOSTS}','ES_METRICBEAT_OUTPUT_CONFIG_KAFKA_TOPIC=${METRICS_NODE_ENVIRONMENT_OUTPUT_CONFIG_KAFKA_TOPIC}']
     command: []
-    volumes: ['/etc:/hostfs/etc:ro','/var/run/docker.sock:/var/run/docker.sock:ro','/proc:/hostfs/proc:ro','swarm_g1_metrics_node_metrics_node_volume:/usr/share/metricbeat/data']
+    volumes: ['/etc:/hostfs/etc:ro','/var/run/docker.sock:/var/run/docker.sock:ro','/proc:/hostfs/proc:ro','${CONTECO_STACKPREFIX}_metrics_node_volume:/usr/share/metricbeat/data']
     ports: []
-    networks: [swarm_overlay]
+    networks: [${CONTECO_NETWORKLOCAL}_overlay]
     deploy:
       mode: global
-      ${METRICS_NODE_DEPLOY_MODE_REPLICATED_REPLICAS}
       resources:
         limits:
-          cpus: '${METRICS_NODE_DEPLOY_RESOURCES_LIMITS_CPUS}'
           memory: '${METRICS_NODE_DEPLOY_RESOURCES_LIMITS_MEMORY}'
         reservations:
-          cpus: '${METRICS_NODE_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${METRICS_NODE_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
-      placement:
-        constraints: [${METRICS_NODE_DEPLOY_PLACEMENT_CONSTRAINTS}]
-      labels: [${METRICS_NODE_DEPLOY_LABELS}]
-    labels: [${METRICS_NODE_LABELS}]
+${METRICS_NODE_COMPOSE_EXTENSIONS}
 # END SERVICE metricbeat.node
 
-volumes: {swarm_g1_metrics_node_metrics_node_volume: { external: true }}
-networks: {swarm_overlay: { external: true }}
+networks: {${CONTECO_NETWORKLOCAL}_overlay: { external: true }}
+volumes: {${CONTECO_STACKPREFIX}_metrics_node_volume: { external: true }}
+${CONTECO_DC_GLOBAL_COMPOSE_EXTENSIONS}
