--- a/modeco/packages/streamsets/export/export_ui_streamsets.docker-compose.yml
+++ b/modeco/packages/streamsets/export/export_ui_streamsets.docker-compose.yml
@@ -5,26 +5,21 @@ services:
 # START SERVICE nginx.rewrite
   nginx:
     image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.nginx.rewrite:1.17.3
-    environment: ['CONTECO_NGINX_CONF_LOCATION=/swarm/export/streamsets', 'CONTECO_NGINX_CONF_PROXY_PASS=swarm_g1_export_streamsets:18630']
+    environment: ['CONTECO_NGINX_CONF_LOCATION=/${CONTECO_URLPREFIX}/streamsets', 'CONTECO_NGINX_CONF_PROXY_PASS=${CONTECO_STACKPREFIX}_streamsets:18630']
     command: []
     volumes: []
     ports: []
-    networks: [modeco_overlay, swarm_overlay]
+    networks: [${CONTECO_NETWORKGLOBAL}_overlay, ${CONTECO_NETWORKLOCAL}_overlay]
     deploy:
       mode: replicated
-      replicas: ${EXPORT_UI_STREAMSETS_DEPLOY_REPLICAS}
       resources:
         limits:
-          cpus: '${EXPORT_UI_STREAMSETS_DEPLOY_RESOURCES_LIMITS_CPUS}'
           memory: '${EXPORT_UI_STREAMSETS_DEPLOY_RESOURCES_LIMITS_MEMORY}'
         reservations:
-          cpus: '${EXPORT_UI_STREAMSETS_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${EXPORT_UI_STREAMSETS_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
-      placement:
-        constraints: [${EXPORT_UI_STREAMSETS_DEPLOY_PLACEMENT_CONSTRAINTS}]
-      labels: [traefik.enable=true,traefik.docker.network=modeco_overlay, traefik.http.services.swarm_g1_export_nginx.loadbalancer.server.port=80, traefik.http.routers.swarm_g1_export_nginx.entrypoints=conteco, traefik.http.routers.swarm_g1_export_nginx.rule=PathPrefix("/swarm/export/streamsets")]
-    labels: [${EXPORT_UI_STREAMSETS_LABELS}]
+${EXPORT_UI_STREAMSETS_COMPOSE_EXTENSIONS}
 # END SERVICE nginx.rewrite
 
+networks: {${CONTECO_NETWORKGLOBAL}_overlay: { external: true }, ${CONTECO_NETWORKLOCAL}_overlay: { external: true }}
 volumes: {}
-networks: {modeco_overlay: { external: true }, swarm_overlay: { external: true }}
+${CONTECO_DC_GLOBAL_COMPOSE_EXTENSIONS}
