--- a/modeco/packages/streamsets/processor/processor.docker-compose.yml
+++ b/modeco/packages/streamsets/processor/processor.docker-compose.yml
@@ -4,27 +4,22 @@ services:
 
 # START SERVICE streamsets.base
   streamsets:
-    image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.streamsets.base:3.10.1
+    image: ${CONTECO_REGISTRY}${CONTECO_REALM_RUNTIME}/conteco.streamsets.base:3.16.0
     environment: ['SDC_JAVA_OPTS=-Xmx${PROCESSOR_DEPLOY_RESOURCES_RESERVATIONS_MEMORY} -Xms${PROCESSOR_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}']
     command: []
-    volumes: ['swarm_g1_processor_streamsets_volume:/data']
+    volumes: ['${CONTECO_STACKPREFIX}_streamsets_volume:/data']
     ports: []
-    networks: [swarm_overlay]
+    networks: [${CONTECO_NETWORKLOCAL}_overlay]
     deploy:
       mode: replicated
-      replicas: ${PROCESSOR_DEPLOY_REPLICAS}
       resources:
         limits:
-          cpus: '${PROCESSOR_DEPLOY_RESOURCES_LIMITS_CPUS}'
           memory: '${PROCESSOR_DEPLOY_RESOURCES_LIMITS_MEMORY}'
         reservations:
-          cpus: '${PROCESSOR_DEPLOY_RESOURCES_RESERVATIONS_CPUS}'
           memory: '${PROCESSOR_DEPLOY_RESOURCES_RESERVATIONS_MEMORY}'
-      placement:
-        constraints: [${PROCESSOR_DEPLOY_PLACEMENT_CONSTRAINTS}]
-      labels: [${PROCESSOR_DEPLOY_LABELS}]
-    labels: [${PROCESSOR_LABELS}]
+${PROCESSOR_COMPOSE_EXTENSIONS}
 # END SERVICE streamsets.base
 
-volumes: {swarm_g1_processor_streamsets_volume: { external: true }}
-networks: {swarm_overlay: { external: true }}
+networks: {${CONTECO_NETWORKLOCAL}_overlay: { external: true }}
+volumes: {${CONTECO_STACKPREFIX}_streamsets_volume: { external: true }}
+${CONTECO_DC_GLOBAL_COMPOSE_EXTENSIONS}
