--- a/modeco/volumes/metrics_monitor_heartbeat_monitors_volume/streamsets.yml
+++ b/modeco/volumes/metrics_monitor_heartbeat_monitors_volume/streamsets.yml
@@ -5,7 +5,7 @@
   check.response.status: [301]
   schedule: '@every 30s'
   fields:
-    scope: module
+    scope: "swarm_g1"
     type: external
     service: streamsets
     area: endpoint
@@ -17,7 +17,7 @@
   check.response.status: [301]
   schedule: '@every 30s'
   fields:
-    scope: module
+    scope: "swarm_g1"
     type: external
     service: streamsets
     area: endpoint
@@ -34,7 +34,7 @@
   check.response.status: [200]
   schedule: '@every 30s'
   fields:
-    scope: module
+    scope: "swarm_g1"
     type: internal
     service: streamsets
     area: endpoint
@@ -46,7 +46,7 @@
   check.response.status: [200]
   schedule: '@every 30s'
   fields:
-    scope: module
+    scope: "swarm_g1"
     type: internal
     service: streamsets
     area: endpoint
